--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
